--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -24,3 +24,44 @@ FontAwesome
 }
 
 $max-width: 80em;
+
+.header {
+    height: 200px;
+    background-image: linear-gradient(to right, rgb(58, 96, 115), rgb(22, 34, 42)) ;
+    margin-bottom: 10px;
+    color: white;
+    
+    h1 {
+      text-align: center;
+      position: relative;
+      top: 45%;
+    }
+}
+
+#vue {
+  h3 {
+    text-align: center;
+  }
+
+  .list {
+      width: 25%;
+      float: left;
+      margin-top: 10px;
+      margin-bottom: 30px;
+      text-align: center;
+
+    img {
+      width: 330px;
+      height: 330px;
+      object-fit: cover;
+    }
+
+    button {
+      background: none;
+      margin-top: 5px;
+      padding:5px 5px;
+      position: relative;
+      font-size: small;
+  }
+  }
+}
